# fragments-cli

./: .env  .gitignore  Cargo.toml  README.md  build.rs  domain.md
src/: lib.rs  main.rs  traits.rs
src/fragmentary/: common.proto  text.proto
src/model/: mod.rs  text.rs
src/proto/: text.proto
tests/: api.rs
