[package]
authors = ["Tom Houlé <tom@tomhoule.com>"]
name = "fragmentary"
version = "0.1.0"
[build-dependencies]
prost-build = "0.3.2"

[dependencies]
actix = "*"
actix-web = "*"
bytes = "0.4.7"
dotenv = "*"
env_logger = "*"
failure = "*"
futures = "0.1"
log = "*"
prost = "0.3.2"
prost-derive = "0.3.2"
serde = "*"
serde_derive = "*"
serde_json = "*"
structopt = "0.2.8"
uuid = "*"
